--- a/checkout.html
+++ b/checkout.html
@@ -11,24 +11,24 @@
 
     <ol class="products">
       <li>
-        <h3>Product 1</h3>
+        <h3>Nike Shoes</h3>
         <img src="images/product1.png" alt="Product 1">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <p class="price">$19.99</p>
+        <p>Nike Shoe, High Top.</p>
+        <p class="price">R2119.99</p>
       </li>
 
       <li>
-        <h3>Product 2</h3>
+        <h3>Nike Shoes</h3>
         <img src="images/product2.png" alt="Product 2">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <p class="price">$29.99</p>
+        <p>Nike Basketball Shoes.</p>
+        <p class="price">R3529.99</p>
       </li>
 
       <li>
-        <h3>Product 3</h3>
+        <h3>Nike Shoes</h3>
         <img src="images/product3.png" alt="Product 3">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <p class="price">$39.99</p>
+        <p>Hyper Dunks Nike Outlet - Nike Women's Hyperdunk 2015 Tb Basketball Shoe.</p>
+        <p class="price">R5539.99</p>
       </li>
     </ol>
 
@@ -42,35 +42,44 @@
       <tbody>
         <tr>
           <td>Product 1</td>
-          <td>$19.99</td>
+          <td>R2119.99</td>
         </tr>
         <tr>
           <td>Product 2</td>
-          <td>$29.99</td>
+          <td>R3529.99</td>
         </tr>
         <tr>
           <td>Product 3</td>
-          <td>$39.99</td>
+          <td>R5539.99</td>
         </tr>
         <tr>
           <td>Subtotal</td>
-          <td>$89.97</td>
+          <td>R11 189,97</td>
         </tr>
         <tr>
           <td>Shipping</td>
-          <td>$0.00</td>
+          <td>R110.00</td>
         </tr>
         <tr>
           <td>Tax</td>
-          <td>$8.99</td>
+          <td>R15.99</td>
         </tr>
         <tr>
           <td>Total</td>
-          <td>$98.96</td>
+          <td>11 414,92</td>
         </tr>
       </tbody>
     </table>
-
+ <!--   <form action="https://sandbox.payfast.co.za/eng/process" method="post">
+    <input type="hidden" name="merchant_id" value="10028505">
+    <input type="hidden" name="merchant_key" value="2sghrk36s71eh">
+    <input type="hidden" name="return_url" value="http://localhost/checkout_form-payfast/success.html">
+    <input type="hidden" name="cancel_url" value="http://localhost/checkout_form-payfast/cancel.html">
+    <input type="hidden" name="notify_url" value="http://localhost/checkout_form-payfast/notify.html">    
+    <input type="hidden" name="amount" value="100.00">
+    <input type="hidden" name="item_name" value="Test Product">
+    <input type="submit">
+ </form> -->
     <button>Proceed to Payment</button>
   </div>
 
@@ -84,14 +93,5 @@
 
 
   
- <!--   <form action="https://sandbox.payfast.co.za/eng/process" method="post">
-    <input type="hidden" name="merchant_id" value="10028505">
-    <input type="hidden" name="merchant_key" value="2sghrk36s71eh">
-    <input type="hidden" name="return_url" value="http://localhost/checkout_form-payfast/success.html">
-    <input type="hidden" name="cancel_url" value="http://localhost/checkout_form-payfast/cancel.html">
-    <input type="hidden" name="notify_url" value="http://localhost/checkout_form-payfast/notify.html">    
-    <input type="hidden" name="amount" value="100.00">
-    <input type="hidden" name="item_name" value="Test Product">
-    <input type="submit">
- </form> -->
+
 
