--- a/checkout.html
+++ b/checkout.html
@@ -70,7 +70,7 @@
         </tr>
       </tbody>
     </table>
- <!--   <form action="https://sandbox.payfast.co.za/eng/process" method="post">
+ <form action="https://sandbox.payfast.co.za/eng/process" method="post">
     <input type="hidden" name="merchant_id" value="10028505">
     <input type="hidden" name="merchant_key" value="2sghrk36s71eh">
     <input type="hidden" name="return_url" value="http://localhost/checkout_form-payfast/success.html">
@@ -78,9 +78,8 @@
     <input type="hidden" name="notify_url" value="http://localhost/checkout_form-payfast/notify.html">    
     <input type="hidden" name="amount" value="100.00">
     <input type="hidden" name="item_name" value="Test Product">
-    <input type="submit">
- </form> -->
-    <button>Proceed to Payment</button>
+    <input type="submit" value="Proceed to Payment"> 
+ </form>
   </div>
 
   <script src="checkout.js"></script>
