--- a/success.html
+++ b/success.html
@@ -7,7 +7,52 @@
 	<link rel="stylesheet" href="styles/checkout.css">
 
 </head>
-<h4>Transaction Successful</h4>
+<body>
+<div class="checkout">
+    <h2>Order Summary</h2>
+
+	<h3>Transaction Successful</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Product</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Product 1</td>
+          <td>R2119.99</td>
+        </tr>
+        <tr>
+          <td>Product 2</td>
+          <td>R3529.99</td>
+        </tr>
+        <tr>
+          <td>Product 3</td>
+          <td>R5539.99</td>
+        </tr>
+        <tr>
+          <td>Subtotal</td>
+          <td>R11 189,97</td>
+        </tr>
+        <tr>
+          <td>Shipping</td>
+          <td>R110.00</td>
+        </tr>
+        <tr>
+          <td>Tax</td>
+          <td>R15.99</td>
+        </tr>
+        <tr>
+          <td>Total</td>
+          <td>11 414,92</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <script src="checkout.js"></script>
 </body>
 
 </html>
