--- a/checkout.html
+++ b/checkout.html
@@ -71,18 +71,17 @@
       </tbody>
     </table>
  <form action="https://sandbox.payfast.co.za/eng/process" method="post">
-    <input type="hidden" name="merchant_id" value="10028505">
-    <input type="hidden" name="merchant_key" value="2sghrk36s71eh">
-    <input type="hidden" name="return_url" value="http://localhost/checkout_form-payfast/success.html">
-    <input type="hidden" name="cancel_url" value="http://localhost/checkout_form-payfast/cancel.html">
-    <input type="hidden" name="notify_url" value="http://localhost/checkout_form-payfast/notify.html">    
+    <input type="hidden" name="merchant_id" value="<entervalues>">
+    <input type="hidden" name="merchant_key" value="<entervalues>">
+    <input type="hidden" name="return_url" value="http://localhost/success.html">
+    <input type="hidden" name="cancel_url" value="http://localhost/cancel.html">
+    <input type="hidden" name="notify_url" value="http://localhost/notify.html">    
     <input type="hidden" name="amount" value="100.00">
     <input type="hidden" name="item_name" value="Test Product">
     <input type="submit" value="Proceed to Payment"> 
  </form>
   </div>
 
-  <script src="checkout.js"></script>
 </body>
 </html>
 
